cmakelists outputs executabel to top level project folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.24.2)
 
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ..)
+
 project(my_mouse)
 
 add_executable(${PROJECT_NAME} my_mouse.c)
