--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,8 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ..)
 
 project(my_mouse)
 
-add_compile_options(-fsanitize=address -Wall -Wextra -g3 -Werror)
+add_compile_options(-Wall -Wextra -g3 -Werror)
 
-add_link_options(-fsanitize=address -Wall -Wextra -g3 -Werror)
+add_link_options(-Wall -Wextra -g3 -Werror)
 
 add_executable(${PROJECT_NAME} my_mouse.c)
