made basic virtual matrix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,8 @@ project(my_mouse)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ..)
 set(SOURCE_DIR "./src")
-set(SOURCES ${SOURCE_DIR}/my_mouse.c ${SOURCE_DIR}/read_maze.c)
+# set(SOURCES ${SOURCE_DIR}/my_mouse.c ${SOURCE_DIR}/read_maze.c )
+FILE(GLOB SOURCES ${SOURCE_DIR}/*.c)
 set(INCLUDE_DIR "./include/")
 
 add_compile_options(-Wall -Wextra -g3 -Werror)
