--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,9 @@ set(SOURCE_DIR "./src")
 FILE(GLOB SOURCES ${SOURCE_DIR}/*.c)
 set(INCLUDE_DIR "./include/")
 
-add_compile_options(-Wall -Wextra -g3 -Werror)
+# add_compile_options(-Wall -Wextra -g3 -Werror)
+add_compile_options(-Wall -Wextra -g3)
+
 add_link_options(-Wall -Wextra -g3 -Werror)
 add_executable(${PROJECT_NAME} ${SOURCES})
 target_include_directories(${PROJECT_NAME} PUBLIC ${INCLUDE_DIR})
